...
                    android:text="@string/create_type_album"
                    android:textAllCaps="true"
                    android:textColor="@color/purple_dark"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:hint="@string/create_name_hint"
                    app:boxBackgroundMode="outline"
...
                    app:hintTextColor="@color/purple_dark"
                    app:boxStrokeColor="@color/purple_primary"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/purple_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/purple_dark" />
                </com.google.android.material.textfield.TextInputLayout>

...
                        android:inputType="textMultiLine"
                        android:textColor="@color/black"
                        android:textColorHint="@color/purple_dark" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnCreateAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/create_submit_button" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
...
