<resources>
    <string name="app_name">Vinilos</string>
    <string name="nav_albums">Álbumes</string>
    <string name="nav_artists">Artistas</string>
    <string name="nav_collectors">Coleccionistas</string>
    <string name="nav_collectors_short">Colección</string>
    <string name="nav_create">Crear</string>
    <string name="create_section_label">Curaduría de archivo</string>
    <string name="create_title">Registra una nueva pieza</string>
    <string name="create_type_album">Álbumes</string>
    <string name="create_type_artist">Artistas</string>
    <string name="create_type_collection">Colección</string>
    <string name="create_coming_soon">Disponible próximamente.</string>
...
    <string name="collector_stat_rating_unit">Promedio</string>
    <string name="collector_stat_favorites_label">FAVORITOS</string>
    <string name="collector_stat_favorites_unit">Artistas</string>
    <string name="collector_stat_value_label">VALOR</string>
    <string name="collector_stat_value_unit">Estimado</string>
    <string name="collector_curatorship_section">CURADURÍA PERSONAL</string>
    <string name="collector_favorite_artists_title">Artistas favoritos</string>
    <string name="collector_email_description">Correo electrónico: %1$s</string>
    <string name="collector_phone_description">Teléfono: %1$s</string>
    <string name="collector_image_description">Foto de perfil de %1$s</string>
    <string name="collector_rating_format">%1$.1f ★</string>
    <string name="collector_value_format">$%1$.0f</string>
    <string name="collector_no_performers">No hay artistas favoritos registrados.</string>
...
