...
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textArtistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/purple_primary"
                android:importantForAccessibility="yes"
                android:textStyle="bold" />
...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:paddingTop="2dp"
...
