...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:id="@+id/textCollectorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/purple_dark"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textCollectorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/gray_text"
                android:importantForAccessibility="yes"/>
...
